Summary of important user-visible changes for releases of the sparsersb package
===============================================================================
sparsersb-1.0.0
===============================================================================
** First Packaged Release. Intended to work with librsb-1.2.