@@ -1,5 +1,11 @@
 Summary of important user-visible changes for releases of the sparsersb package
 ===============================================================================
-sparsersb-1.0.0
+sparsersb-1???? Release Date: 2015-??-??
+===============================================================================
+** Documentation fixes: ???
+** ("get",...) ???
+** ...
+===============================================================================
+sparsersb-1.0.0 Release Date: 2015-05-31
 ===============================================================================
 ** First Packaged Release. Intended to work with librsb-1.2.
